<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="6dp"
    android:paddingBottom="12dp"
    android:paddingLeft="6dp"
    android:paddingRight="6dp"
    >
    
    <TextView style="@style/PrefLabel"
	    android:text="@string/prefsLayout"
	    />
	<TableLayout android:id="@+id/prefLayoutToggle"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:padding="6dp"
	    >
	    <TableRow>
		    <ImageView style="@style/PrefLayoutImage"
		        android:src="@drawable/layout_list1"
		        android:tag="0"
		        />
		    <ImageView style="@style/PrefLayoutImage"
		        android:src="@drawable/layout_list2"
		        android:tag="1"
		        />
		    <ImageView style="@style/PrefLayoutImage"
		        android:src="@drawable/layout_grid2"
		        android:tag="2"
		        />
		    <ImageView style="@style/PrefLayoutImage"
		        android:src="@drawable/layout_grid3"
		        android:tag="4"
		        />
		    <ImageView style="@style/PrefLayoutImage"
		        android:src="@drawable/layout_grid4"
		        android:tag="3"
		        />
	    </TableRow>
	    <TableRow android:layout_marginTop="4dp">
		    <TextView style="@style/PrefLayoutToggle" android:tag="toggle_0" />
		    <TextView style="@style/PrefLayoutToggle" android:tag="toggle_1" />
		    <TextView style="@style/PrefLayoutToggle" android:tag="toggle_2" />
		    <TextView style="@style/PrefLayoutToggle" android:tag="toggle_4" />
		    <TextView style="@style/PrefLayoutToggle" android:tag="toggle_3" />
	    </TableRow>
	</TableLayout>
    
    <TextView style="@style/PrefLabel"
	    android:text="@string/prefsLabelSize"
	    />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        >
	    <SeekBar style="@style/PrefSeekbar" android:id="@+id/prefsLabelSize" />
	    <TextView style="@style/PrefSeekbarHint" android:id="@+id/prefsLabelSizeIndicator" />
    </LinearLayout>
    
    <TextView style="@style/PrefLabel"
	    android:text="@string/prefsIconSize"
	    />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        >
	    <SeekBar style="@style/PrefSeekbar" android:id="@+id/prefsIconSize" />
	    <TextView style="@style/PrefSeekbarHint" android:id="@+id/prefsIconSizeIndicator" />
	</LinearLayout>
	
    <TextView style="@style/PrefLabel"
	    android:text="@string/prefsNumTabs"
	    />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        >
	    <SeekBar style="@style/PrefSeekbar" android:id="@+id/prefsNumTabs" />
	    <TextView style="@style/PrefSeekbarHint" android:id="@+id/prefsNumTabsIndicator" />
	</LinearLayout>

    <CheckBox style="@style/PrefLabel"
        android:id="@+id/prefsSemiTransparent" 
        android:text="@string/prefsSemiTransparent"
        />
    
    <CheckBox style="@style/PrefLabel"
        android:id="@+id/prefsAutoStartSingle" 
        android:text="@string/prefsAutoStartSingle"
        />
    
    <CheckBox style="@style/PrefLabel"
        android:id="@+id/prefsBackgroundIconLoader" 
        android:text="@string/prefsBackgroundIconLoader"
        />

    <CheckBox style="@style/PrefLabel"
        android:id="@+id/prefsHighResIcon" 
        android:text="@string/prefsHiResIcon"
        />

    <CheckBox style="@style/PrefLabel"
        android:id="@+id/prefsAppClearTask" 
        android:text="@string/prefsAppClearTask"
        />
    
</LinearLayout>
